# project-euler-hs

./: README.md  hie.yaml  hie2.yaml  project-euler-hs.cabal
app/: Main.hs
src/: Fibonacci.hs  Primes.hs  Problem001.hs  Problem002.hs  Problem003.hs  Problem004.hs  Problem014.hs  Problem016.hs  Problem092.hs
src/Util/: Fibonacci.hs  List.hs  Number.hs  Primes.hs
test/: Spec.hs
