cabal-version:      3.0
name:               project-euler-hs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            Unlicense
license-file:       LICENSE
author:             Bernd Beuster
maintainer:         bernd.beuster@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md

library
    exposed-modules:  Problem001
                      Problem002
                      Problem003
                      Problem004
                      Problem014
                      Problem016
                      Problem092
                      Util.Fibonacci
                      Util.List
                      Util.Number
                      Util.Primes

    build-depends:    base

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -Werror

executable project-euler-hs
    main-is:          Main.hs

    build-depends:    base
                    , project-euler-hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall -Werror

test-suite test-project-euler-hs
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs

    build-depends:    base
                    , hspec
                    , project-euler-hs

    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall -Werror
